# resident-expenses

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.json  justfile  pyproject.toml
scripts/: extract_pdf_text.py
src/resident_expenses/: cli.py  config.py  data_json.py  models.py  reconcile.py  runner.py
src/resident_expenses/extract/: __init__.py  ocr.py  pdf_text.py
src/resident_expenses/report/: model.py  render.py
src/resident_expenses/report/templates/: locales.json  report.html.j2
tests/: test_config.py  test_data_json.py  test_models.py  test_ocr.py  test_pdf_text.py  test_reconcile.py  test_runner.py
tests/report/: test_locales.py  test_model.py  test_render.py
web/: package-lock.json  package.json
