[project]
name = "resident-expenses"
version = "0.1.0"
description = "CLI for a comunidad de vecinos: reconcile income/expenses from administrator PDFs and render an HTML report"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pdfplumber>=0.11",
    "plotly>=5.20",
    "jinja2>=3.1",
]

[project.scripts]
resident-expenses = "resident_expenses.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resident_expenses"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/resident_expenses", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
